Fix accessibility errors;

--- a/src/components/global/ConsentBanner.astro
+++ b/src/components/global/ConsentBanner.astro
@@ -28,9 +28,8 @@
           <a
             href="/privacy"
             class="text-accent underline-offset-2 hover:text-accent-hover"
-            aria-label="Learn more about our privacy policy"
           >
-            Learn more
+            Read our privacy policy
           </a>
         </p>
       </div>
