--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -25,11 +25,7 @@ import Layout from '../layouts/Layout.astro';
       </p>
 
       <div class="flex flex-col sm:flex-row gap-4 justify-center items-center">
-        <a
-          href="/"
-          class="btn btn-primary"
-          aria-label="Back to Workshop home page"
-        >
+        <a href="/" class="btn btn-primary" aria-label="Back to Workshop">
           <Icon name="home" class="w-5 h-5" />
           Back to Workshop
         </a>
