--- a/src/components/global/ConsentBanner.astro
+++ b/src/components/global/ConsentBanner.astro
@@ -27,7 +27,7 @@
           site.
           <a
             href="/privacy"
-            class="text-accent underline-offset-2 hover:text-accent-hover"
+            class="inline-block py-1 text-accent underline-offset-2 hover:text-accent-hover"
           >
             Read our privacy policy
           </a>
